--- a/Domain similarity.ipynb
+++ b/Domain similarity.ipynb
@@ -8,15 +8,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 125,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in /Users/monisha.patel/opt/anaconda3/lib/python3.7/site-packages (0.25.1)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /Users/monisha.patel/opt/anaconda3/lib/python3.7/site-packages (from pandas) (2019.3)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /Users/monisha.patel/opt/anaconda3/lib/python3.7/site-packages (from pandas) (1.17.2)\n",
+      "Requirement already satisfied: python-dateutil>=2.6.1 in /Users/monisha.patel/opt/anaconda3/lib/python3.7/site-packages (from pandas) (2.8.0)\n",
+      "Requirement already satisfied: six>=1.5 in /Users/monisha.patel/opt/anaconda3/lib/python3.7/site-packages (from python-dateutil>=2.6.1->pandas) (1.12.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "## Logic\n",
-    "\n",
-    "1. Receive a cousin domain name\n",
-    "2. Iterate through the dataset to find similarity score with each domain\n",
-    "3. Get domain name with highest similarity\n",
-    "4. Return the domain from the dataset"
+    "pip install pandas"
    ]
   },
   {
@@ -31,18 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#dataset = pd.read_csv(\"top10milliondomains.csv\")\n",
-    "dataset = pd.read_csv(\"top-1m.csv\",header = None, names = [\"Rank\", \"Domain\"])\n",
+    "#Import Dataset\n",
+    "dataset = pd.read_csv(\"http://s3.amazonaws.com/alexa-static/top-1m.csv.zip\" ,header = None, names = [\"Rank\", \"Domain\"])\n",
+    "#use first 1000 top domains\n",
     "df = dataset[:1000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -89,39 +100,38 @@
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>4</td>\n",
-       "      <td>baidu.com</td>\n",
+       "      <td>tmall.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>5</td>\n",
-       "      <td>wikipedia.org</td>\n",
+       "      <td>baidu.com</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Rank         Domain\n",
-       "0     1     google.com\n",
-       "1     2    youtube.com\n",
-       "2     3   facebook.com\n",
-       "3     4      baidu.com\n",
-       "4     5  wikipedia.org"
+       "   Rank        Domain\n",
+       "0     1    google.com\n",
+       "1     2   youtube.com\n",
+       "2     3  facebook.com\n",
+       "3     4     tmall.com\n",
+       "4     5     baidu.com"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = dataset[:1000]\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,27 +155,20 @@
     "    elif df['similarity'].max() != 1:\n",
     "        sim = df[df['similarity']==df['similarity'].max()]\n",
     "        domain = sim.iloc[0,1]\n",
-    "        msg = \"Did you mean {}\".format(domain)\n",
+    "        msg = \"Do you mean {}\".format(domain)\n",
     "    return msg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Domain, dont include http://www. : alegroup.info\n"
+      "Enter Domain, dont include http://www. : cyberinc.com\n"
      ]
     },
     {
@@ -183,10 +186,10 @@
     {
      "data": {
       "text/plain": [
-       "'Did you mean allegro.pl'"
+       "'Do you mean inc.com'"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
